Bump max supported hardware decode on macOS to 8K.

This is the same value we have on Windows, presumably this will fail
to initialize if it's not actually supported. This just allows an
attempt to even go through.

BUG=806474
TEST=tbd

Change-Id: Ib76206051249340ab44c2b809f9c86819659ed12