media/gpu/vt_video_decode_accelerator_mac.cc
@@ -1353,7 +1353,7 @@ VTVideoDecodeAccelerator::GetSupportedProfiles() {
     SupportedProfile profile;
     profile.profile = supported_profile;
     profile.min_resolution.SetSize(16, 16);
-    profile.max_resolution.SetSize(4096, 2160);
+    profile.max_resolution.SetSize(7680, 4320);
     profiles.push_back(profile);
   }
   return profiles;
